[gd_scene load_steps=8 format=3 uid="uid://cqp6vn8wrgx1f"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_player"]
[ext_resource type="PackedScene" uid="uid://dps0kmdxfm63e" path="res://assets/player/Animation_Idle_3_withSkin.glb" id="2_idle"]
[ext_resource type="PackedScene" path="res://assets/player/Animation_Walking_withSkin.glb" id="3_walk"]
[ext_resource type="PackedScene" path="res://assets/player/Animation_Running_withSkin.glb" id="4_run"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.4
height = 1.8

[sub_resource type="Animation" id="Animation_RESET"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ModelRoot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_main"]
_data = {
"RESET": SubResource("Animation_RESET")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="ModelRoot" type="Node3D" parent="."]

[node name="IdleModel" parent="ModelRoot" instance=ExtResource("2_idle")]

[node name="WalkModel" parent="ModelRoot" instance=ExtResource("3_walk")]
visible = false

[node name="RunModel" parent="ModelRoot" instance=ExtResource("4_run")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_main")
}

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 4)
current = true
fov = 75.0

[node name="InteractionRay" type="RayCast3D" parent="CameraPivot"]
target_position = Vector3(0, 0, -3)
collision_mask = 3
collide_with_areas = true
